@@ -2,14 +2,12 @@
 #include <malloc.h>
 #include <math.h>
 #include <float.h>
+#include <windef.h>
 
 #include <algorithm>
 
 #ifdef __MSVC__
 #define copysign(x,y) _copysign(x,y);
-#else
-#define __min(x,y) ((x) < (y) ? (x) : (y))
-#define __max(x,y) ((x) > (y) ? (x) : (y))
 #endif
 
 
