@@ -1,3 +1,10 @@
+2007-11-19  Stefan Kost  <ensonic@users.sf.net>
+
+	* FSM/Infector/Infector.cpp:
+	* FSM/Infector/Makefile.am:
+	* FSM/dspchips/DSPChips.h:
+	  More porting. Now loads fine.
+
 2007-11-13  Stefan Kost  <ensonic@users.sf.net>
 
 	* configure.ac:
